--- a/src/src/app/app.component.html
+++ b/src/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="flex justify-center px-6 py-10">
+<div class="bg-gray-50 flex justify-center px-6 py-10">
   <div class="max-w-screen-sm w-full">
     <app-header></app-header>
     <app-todo-panel></app-todo-panel>
