--- a/src/src/app/components/todo-panel/todo-panel.component.html
+++ b/src/src/app/components/todo-panel/todo-panel.component.html
@@ -1,17 +1,13 @@
 <div class="flex flex-col justify-center gap-4 my-8">
-  <input
-    type="text"
-    class="px-4 py-4 rounded-lg shadow-lg w-full focus:ring-2 focus:ring-red-500 border-none transition-all duration-150 ease-in"
-    placeholder="Create new task..."
-  />
+  <form>
+    <input type="text" name="main-input"
+      class="px-4 py-4 rounded-lg shadow-lg w-full focus:ring-2 focus:ring-red-500 border-none transition-all duration-150 ease-in"
+      placeholder="Create new task..." [(ngModel)]="InputTodo" (keyup.enter)="createNewItem()" />
+  </form>
 
-  <div
-    class="w-full bg-white shadow-lg rounded-lg p-4 border-b-4 border-red-500"
-  >
-    <app-todo-item
-      [TodoItem]="item"
-      *ngFor="let item of TodoList"
-    ></app-todo-item>
+  <div class="w-full bg-white shadow-lg rounded-lg p-4 border-b-4 border-red-500">
+    <app-todo-item [TodoItem]="item" *ngFor="let item of TodoList" (deleteFunction)="deleteItem(item.id)"
+      (updateFunction)="updateItem(item.id)"></app-todo-item>
 
     <div class="flex items-center justify-between pt-4">
       <p class="text-sm flex justify-center items-center gap-2">
@@ -23,25 +19,21 @@
 
       <div class="space-x-2">
         <button
-          class="text-sm text-slate-700 rounded-lg hover:text-white hover:bg-red-500 px-2 py-1 transition-all duration-150 ease-in"
-        >
+          class="text-sm text-slate-700 rounded-lg hover:text-white hover:bg-red-500 px-2 py-1 transition-all duration-150 ease-in">
           All
         </button>
         <button
-          class="text-sm text-slate-700 rounded-lg hover:text-white hover:bg-gray-500 px-2 py-1 transition-all duration-150 ease-in"
-        >
+          class="text-sm text-slate-700 rounded-lg hover:text-white hover:bg-gray-500 px-2 py-1 transition-all duration-150 ease-in">
           Active
         </button>
         <button
-          class="text-sm text-slate-700 rounded-lg hover:text-white hover:bg-emerald-500 px-2 py-1 transition-all duration-150 ease-in"
-        >
+          class="text-sm text-slate-700 rounded-lg hover:text-white hover:bg-emerald-500 px-2 py-1 transition-all duration-150 ease-in">
           Completed
         </button>
       </div>
 
-      <button
-        class="text-sm text-slate-700 rounded-lg hover:text-white hover:bg-red-500 px-2 py-1 transition-all duration-150 ease-in"
-      >
+      <button (click)="deleteAllCheckedItems()"
+        class="text-sm text-slate-700 rounded-lg hover:text-white hover:bg-red-500 px-2 py-1 transition-all duration-150 ease-in">
         Clear Completed
       </button>
     </div>
