--- a/src/src/app/components/todo-panel/todo-panel.component.html
+++ b/src/src/app/components/todo-panel/todo-panel.component.html
@@ -1,22 +1,42 @@
 <div class="flex flex-col justify-center gap-4 my-8">
-  <form>
+  <div class="flex item-center rounded-lg shadow-lg bg-white text-slate-700">
+    <button
+      *ngIf="todoList.length > 0"
+      (click)="completeAllItems()"
+      class="px-4"
+    >
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        fill="none"
+        viewBox="0 0 24 24"
+        stroke-width="2.5"
+        stroke="currentColor"
+        class="size-6"
+      >
+        <path
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          d="m19.5 8.25-7.5 7.5-7.5-7.5"
+        />
+      </svg>
+    </button>
     <input
       type="text"
       name="main-input"
-      class="px-4 py-4 rounded-lg shadow-lg w-full focus:ring-2 focus:ring-red-500 border-none transition-all duration-150 ease-in"
-      placeholder="Create new task..."
-      [(ngModel)]="InputTodo"
+      class="px-4 py-4 w-full focus:ring-2 rounded-r-lg focus:ring-red-500 border-none transition-all duration-150 ease-in"
+      placeholder="What need to be done?"
+      [(ngModel)]="inputTodo"
       (keyup.enter)="createNewItem()"
     />
-  </form>
+  </div>
 
   <div
-    *ngIf="TodoList.length > 0"
+    *ngIf="todoList.length > 0"
     class="w-full bg-white shadow-lg rounded-lg p-4 border-b-4 border-red-500"
   >
     <app-todo-item
-      [TodoItem]="item"
-      *ngFor="let item of getTotoListByTab(CurrentTab)"
+      [todoList]="item"
+      *ngFor="let item of getTotoListByTab(currentTab)"
       (deleteFunction)="deleteItem(item.id)"
       (updateFunction)="updateItem(item)"
     ></app-todo-item>
@@ -24,26 +44,26 @@
     <div class="flex items-center justify-between pt-4">
       <p class="text-sm flex justify-center items-center gap-2">
         <span class="text-red-500 font-bold text-xl">
-          {{ getItemsLeft() }}
+          {{ getNumberItemsLeft() }}
         </span>
         item left
       </p>
 
       <div class="space-x-2">
         <button
-          (click)="changeCurrentTab('all')"
+          (click)="changecurrentTab('all')"
           class="text-sm text-slate-700 rounded-lg hover:text-white hover:bg-red-500 px-2 py-1 transition-all duration-150 ease-in"
         >
           All
         </button>
         <button
-          (click)="changeCurrentTab('active')"
+          (click)="changecurrentTab('active')"
           class="text-sm text-slate-700 rounded-lg hover:text-white hover:bg-gray-500 px-2 py-1 transition-all duration-150 ease-in"
         >
           Active
         </button>
         <button
-          (click)="changeCurrentTab('completed')"
+          (click)="changecurrentTab('completed')"
           class="text-sm text-slate-700 rounded-lg hover:text-white hover:bg-emerald-500 px-2 py-1 transition-all duration-150 ease-in"
         >
           Completed
