--- a/src/src/app/app.component.html
+++ b/src/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="bg-gray-50 h-screen flex justify-center px-6 py-10">
   <div class="max-w-screen-sm w-full">
     <app-header></app-header>
-    <app-todo-panel [(todoList)]="todoList"></app-todo-panel>
+    <app-todo-panel></app-todo-panel>
     <app-footer></app-footer>
   </div>
 </div>
