--- a/src/src/app/components/todo-item/todo-item.component.html
+++ b/src/src/app/components/todo-item/todo-item.component.html
@@ -21,14 +21,14 @@
 
   <input
     *ngIf="editable"
-    (keyup.enter)="updateItem()"
+    (keyup.enter)="handleUpdateItem()"
     [(ngModel)]="inputName"
     class="flex-1 font-semibold text-base px-4 py-2 border-2 border-teal-500 rounded-lg focus:outline-none focus:border-teal-500 transition-all duration-150 ease-in-out"
   />
 
   <button
     *ngIf="!editable"
-    (click)="deleteItem()"
+    (click)="handleDeleteItem()"
     class="absolute top-1/2 right-0 group-hover:right-4 -translate-y-1/2 text-red-500 opacity-0 group-hover:opacity-100 transition duration-150 ease-in-out"
   >
     <svg
