--- a/src/src/app/components/todo-item/todo-item.component.html
+++ b/src/src/app/components/todo-item/todo-item.component.html
@@ -5,18 +5,19 @@
     *ngIf="!editable"
     name=""
     type="checkbox"
-    [checked]="todoList.status"
-    (change)="todoList.status = !todoList.status"
-    [id]="todoList.id"
+    [checked]="todoItem.status"
+    (change)="todoItem.status = !todoItem.status"
+    [id]="todoItem.id"
     class="focus:line-through cursor-pointer w-5 h-5 bg-red-100 rounded border-none focus:ring-0 focus:ring-transparent text-emerald-500 transition-all duration-150 ease-in-out"
   />
 
   <p
     *ngIf="!editable"
     class="flex-1 select-none font-semibold text-lg"
+    [ngClass]="todoItem.status ? 'line-through' : ''"
     (dblclick)="toggleEdit()"
   >
-    {{ todoList.name }}
+    {{ todoItem.name }}
   </p>
 
   <input
