--- a/src/src/app/components/todo-item/todo-item.component.html
+++ b/src/src/app/components/todo-item/todo-item.component.html
@@ -13,8 +13,8 @@
 
   <p
     *ngIf="!editable"
-    class="flex-1 select-none font-semibold text-lg"
-    [ngClass]="todoItem.status ? 'line-through' : ''"
+    class="flex-1 select-none font-semibold text-lg text-slate-600 transition-all duration-150 ease-in-out"
+    [ngClass]="todoItem.status ? 'line-through text-slate-400' : ''"
     (dblclick)="toggleEdit()"
   >
     {{ todoItem.name }}
