--- a/src/src/app/components/todo-item/todo-item.component.html
+++ b/src/src/app/components/todo-item/todo-item.component.html
@@ -6,7 +6,7 @@
     name=""
     type="checkbox"
     [checked]="todoItem.completed"
-    (change)="todoItem.completed = !todoItem.completed"
+    (change)="this.todoService.toggleItem(todoItem.id)"
     [id]="todoItem.id"
     class="relative peer forced-colors:appearance-auto appearance-none cursor-pointer w-5 h-5 bg-red-100 rounded border-none focus:ring-0 focus:ring-transparent checked:bg-emerald-500 transition-all duration-150 ease-in-out"
   />
