--- a/src/src/app/components/todo-panel/todo-panel.component.html
+++ b/src/src/app/components/todo-panel/todo-panel.component.html
@@ -36,9 +36,7 @@
   >
     <app-todo-item
       [todoItem]="item"
-      *ngFor="let item of todoService.getTotoListByTab(currentTab)"
-      (deleteFunction)="todoService.deleteItem(item.id)"
-      (updateFunction)="todoService.updateItem(item)"
+      *ngFor="let item of filteredItems$ | async"
     ></app-todo-item>
 
     <div class="flex items-center justify-between pt-4">
@@ -51,19 +49,19 @@
 
       <div class="space-x-2">
         <button
-          (click)="changecurrentTab('all')"
+          (click)="changeCurrentTab('all')"
           class="text-sm text-slate-700 rounded-lg hover:text-white hover:bg-red-500 px-2 py-1 transition-all duration-150 ease-in"
         >
           All
         </button>
         <button
-          (click)="changecurrentTab('active')"
+          (click)="changeCurrentTab('active')"
           class="text-sm text-slate-700 rounded-lg hover:text-white hover:bg-gray-500 px-2 py-1 transition-all duration-150 ease-in"
         >
           Active
         </button>
         <button
-          (click)="changecurrentTab('completed')"
+          (click)="changeCurrentTab('completed')"
           class="text-sm text-slate-700 rounded-lg hover:text-white hover:bg-emerald-500 px-2 py-1 transition-all duration-150 ease-in"
         >
           Completed
