--- a/src/src/app/components/header/header.component.html
+++ b/src/src/app/components/header/header.component.html
@@ -5,7 +5,7 @@
 </div> -->
 <div class="flex justify-center">
   <h1
-    class="text-red-500 font-bold text-4xl uppercas pb-2 border-b-4 border-red-500"
+    class="bg-clip-text text-transparent bg-gradient-to-tr from-red-500 to-orange-500 font-black text-6xl border-red-500"
   >
     TodoList
   </h1>
